c5 - alterando paragrafo do autor e inserindo link na home

--- a/autor.html
+++ b/autor.html
@@ -2,6 +2,6 @@
     <body>
         <h2>Sobre o Autor:</h2>
 
-        <p>Meu nome é João Guilherme.</p>
+        <p>Meu nome é João Guilherme e sou aluno.</p>
     </body>
 </html>
