c9 - criando uma lista de cursos

--- a/home.html
+++ b/home.html
@@ -4,6 +4,11 @@
 
         <img src="img/logo.jpg" />
 
+        <ul>
+            <li>Curso Avançado de Git</li>
+            <li>Curso Avançado de html</li>            
+        </ul>
+
         <a href="autor.html">Autor</a>
     </body>
 </html>
