--- a/html/autor.html
+++ b/html/autor.html
@@ -3,5 +3,7 @@
         <h2>Sobre o Autor:</h2>
 
         <p>Meu nome é João Guilherme e sou aluno.</p>
+
+        <p>Meu nome é joaogui e tambem sou aluno.</p>
     </body>
 </html>
