--- a/html/cursos.html
+++ b/html/cursos.html
@@ -9,6 +9,7 @@
             <li>Curso Avançado de html</li>
             <li>Curso Avançado de CSS</li>
             <li>Curso Avançado de Js</li>
+            <li>Curso Básico de Js</li>
 
         </ul>
 
