--- a/html/cursos.html
+++ b/html/cursos.html
@@ -8,6 +8,7 @@
             <li>Curso Avançado de Git</li>
             <li>Curso Avançado de html</li>
             <li>Curso Avançado de CSS</li>
+            <li>Curso basico de CSS</li>
             <li>Curso Avançado de Js</li>
             <li>Curso Básico de Js</li>
 
