c29 - inserindo id no link de autor da página cursos

--- a/html/cursos.html
+++ b/html/cursos.html
@@ -11,9 +11,8 @@
             <li>Curso basico de CSS</li>
             <li>Curso Avançado de Js</li>
             <li>Curso Básico de Js</li>
-
         </ul>
 
-        <a href="autor.html">Autor</a>
+        <a id="link-autor" href="autor.html">Autor</a>
     </body>
 </html>
