c31 - Inserindo link de alunos na pagina de curos

--- a/html/cursos.html
+++ b/html/cursos.html
@@ -13,11 +13,9 @@
             <li>Curso Básico de Js</li>
         </ul>
 
-<<<<<<< HEAD
         <a href="contato.html">contato</a>
-        <a href="autor.html">Autor</a>
-=======
+        <a href="alunos.html">alunos</a>
         <a id="link-autor" href="autor.html">Autor</a>
->>>>>>> layout
+
     </body>
 </html>
