--- a/html/cursos.html
+++ b/html/cursos.html
@@ -13,7 +13,7 @@
             <li>Curso Básico de Js</li>
         </ul>
 
-        <a href="contato.html">contato</a>
+        <a id="link-contato" href="contato.html">contato</a>
         <a href="alunos.html">alunos</a>
         <a id="link-autor" href="autor.html">Autor</a>
 
