c33 - Inserindo Novo curso Basico de GIT

--- a/html/cursos.html
+++ b/html/cursos.html
@@ -5,6 +5,7 @@
         <img src="img/logo.jpg" />
 
         <ul>
+            <li>Curso basico de Git</li>
             <li>Curso Avançado de Git</li>
             <li>Curso Avançado de html</li>
             <li>Curso Avançado de CSS</li>
@@ -13,7 +14,7 @@
             <li>Curso Básico de Js</li>
         </ul>
 
-        <a id="link-contato" href="contato.html">contato</a>
+        <a id="link-contat" href="contato.html">contato</a>
         <a href="alunos.html">alunos</a>
         <a id="link-autor" href="autor.html">Autor</a>
 
